2006-01-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/{main.c,rfbserver.c}: fix timely closing of clients;
	  the client iterator in rfbProcessEvents() has to iterate also
	  over clients whose sock < 0. Noticed by Karl.

2006-01-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: the big split. (and -afteraccept and -passwdfile read:..)
	* examples/pnmshow24.c: fix typo.

2006-01-08  Karl Runge <runge@karlrunge.com>
	* libvncclient/vncviewer.c: fix non-jpeg/libz builds.
	* examples/pnmshow24.c: fix non-ALLOW24BPP builds.
	* libvncserver/main.c: fix 'static int' defn.

2006-01-05  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: rfbRegisterProtocolExtension extMutex was
	  never initialized.

2005-12-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: enhance -passwdfile features, filetransfer on by default.

2005-12-19  Dave Stuart <dave@justdave.us>
	* libvncserver/{main.c,rfbserver.c,cargs.c}, rfb/rfb.h: introduce
	  deferPtrUpdateTime, which defers the handling of pointer events
	  for a couple of milliseconds.

2005-12-19  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c, libvncclient/{sockets.c,vncviewer.c},
	  libvncserver/{main.c,rfbserver.c,sockets.c}: fix MinGW32 compilation

2005-12-08  "Mazin, Malvina" <Malvina.Mazin@kla-tencor.com>
	* configure.ac, libvncserver/sockets.c: on Solaris 2.7, write may
	  return ENOENT when it really means EAGAIN.

2005-12-07  Giampiero Giancipoli <giampiero.giancipoli@fredreggiane.com>
	* libvncclient/vncviewer.c: plug memory leaks

2005-12-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: use unicode to determine the keysym
	  (much more reliable than the old method)

2005-11-25  Karl Runge <runge@karlrunge.com>
	* configure.ac: disable tightvnc-filetransfer if no libpthread.
	  add --without-pthread option.
	* libvncserver/Makefile.am: enable WITH_TIGHTVNC_FILETRANSFER
	  conditional.