@@ -3,7 +3,7 @@
 exec wish "$0" "$@"
 catch {rename send {}}
 #
-# Copyright (c) 2004-2005 Karl J. Runge <runge@karlrunge.com>
+# Copyright (c) 2004-2006 Karl J. Runge <runge@karlrunge.com>
 # All rights reserved.
 #
 #  This is free software; you can redistribute it and/or modify
@@ -5955,7 +5955,7 @@ if {"$argv" == "-spit"} {
 	puts "#ifndef _TKX11VNC_H"
 	puts "#define _TKX11VNC_H"
 	puts "#ifdef NOGUI"
-	puts "char gui_code[] = \"\";"
+	puts "char gui_code\[\] = \"\";"
 	puts "#else"
 	puts "/*"
 	puts " * tkx11vnc.h: generated by 'tkx11vnc -spit'"
