@@ -1,7 +1,7 @@
 #ifndef _TKX11VNC_H
 #define _TKX11VNC_H
 #ifdef NOGUI
-char gui_code = "";
+char gui_code[] = "";
 #else
 /*
  * tkx11vnc.h: generated by 'tkx11vnc -spit'
@@ -14,7 +14,7 @@ char gui_code = "";
 "exec wish \"$0\" \"$@\"\n"
 "catch {rename send {}}\n"
 "#\n"
-"# Copyright (c) 2004-2005 Karl J. Runge <runge@karlrunge.com>\n"
+"# Copyright (c) 2004-2006 Karl J. Runge <runge@karlrunge.com>\n"
 "# All rights reserved.\n"
 "#\n"
 "#  This is free software; you can redistribute it and/or modify\n"
@@ -5966,7 +5966,7 @@ char gui_code = "";
 "	puts \"#ifndef _TKX11VNC_H\"\n"
 "	puts \"#define _TKX11VNC_H\"\n"
 "	puts \"#ifdef NOGUI\"\n"
-"	puts \"char gui_code[] = \\\"\\\";\"\n"
+"	puts \"char gui_code\\[\\] = \\\"\\\";\"\n"
 "	puts \"#else\"\n"
 "	puts \"/*\"\n"
 "	puts \" * tkx11vnc.h: generated by 'tkx11vnc -spit'\"\n"
