@@ -117,6 +117,11 @@
 #endif
 
 #if (SMALL_FOOTPRINT > 1)
+#undef LIBVNCSERVER_HAVE_XKEYBOARD
+#undef LIBVNCSERVER_HAVE_LIBXINERAMA
+#undef LIBVNCSERVER_HAVE_LIBXRANDR
+#undef LIBVNCSERVER_HAVE_LIBXFIXES
+#undef LIBVNCSERVER_HAVE_LIBXDAMAGE
 #define LIBVNCSERVER_HAVE_XKEYBOARD 0
 #define LIBVNCSERVER_HAVE_LIBXINERAMA 0
 #define LIBVNCSERVER_HAVE_LIBXRANDR 0
@@ -125,6 +130,9 @@
 #endif
 
 #if (SMALL_FOOTPRINT > 2)
+#undef LIBVNCSERVER_HAVE_UTMPX_H
+#undef LIBVNCSERVER_HAVE_PWD_H
+#undef REMOTE_CONTROL
 #define LIBVNCSERVER_HAVE_UTMPX_H 0
 #define LIBVNCSERVER_HAVE_PWD_H 0
 #define REMOTE_CONTROL 0
