@@ -1,3 +1,6 @@
+2006-01-12  Karl Runge <runge@karlrunge.com>
+	* configure.ac: add switches for most X extensions.
+
 2006-01-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
 	* libvncserver/{main.c,rfbserver.c}: fix timely closing of clients;
 	  the client iterator in rfbProcessEvents() has to iterate also
